# agent-monitoring-with-agent365

./: .env.template  .gitignore  A365_CMD.md  README.md  ToolingManifest.json  agent.py  auth.py  host.py  main.py  pyproject.toml  requirements.txt
modules/: agent.py  auth.py  host.py  token_cache.py
scripts/: New-Agent365ToolsServicePrincipalProdPublic.ps1  Start-AgentsPlayground.ps1
